--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
+    "date-fns": "^2.13.0",
+    "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
+    "moment": "^2.25.3",
     "swiper": "^5.3.8",
-    "vue": "^2.5.2",
-    "vue-router": "^3.1.6"
+    "vue": "^2.6.11",
+    "vue-cli": "^2.9.6",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
